# downscaling

./: .gitignore  README.md  analyse.py  analyse_2.py  command_installpy.txt  downscaling.R  downscaling_egpd_nn.py  functions_dwscl.py  load_libraries.R  occurence.py  pinnEV.R  prepare.R  prepare_dwscl.py  pyproject.toml
downscaling/: __init__.py  analysis.py  config.py  data.py  diagnostics.py  egpd.py  egpd_torch.py  evaluation.py  features.py  loso.py  models.py  neural.py  nn.py  occurrence.py  occurrence_metrics.py  paths.py  plotting.py  positive_rain.py  prediction.py  preprocess.py  regression.py  scores.py  settings.py  simulations.py  splits.py  stationary.py  training.py  tuning.py  utils.py
script/: analyse_desc.py  compare_models.py  final_model_and_simu.py  fit_only.py  glm_gam_only.py  loso_occurence.py  loso_positive.py  occurence.py  positive_rain.py  prepare_dwscl.py
